--- a/13 Assignment - 09 febr 2016/css/style.css
+++ b/13 Assignment - 09 febr 2016/css/style.css
@@ -5,20 +5,32 @@ body {
   font-family: 'Questrial';
 }
 
-.cf-reservation-content {
-  float: none;
-  margin: 3.3% auto;
+.outer {
+  position: relative;
+  height: 100vh;
+  /*left: 25%;*/
 }
 
+.inner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.cf-reservation-content {
+  float: none;
+  margin: 0 auto;
+}
 
 .row-set {
   padding-top: 40px;
-  padding-bottom: 60px;
+  padding-bottom: 40px;
   background-color: #F8F7F0;
 }
 
 a {
-  text-decoration: underline;;
+  text-decoration: underline;
   color: inherit;
 }
 
