--- a/14 Assignment - 09 febr 2016/css/style.css
+++ b/14 Assignment - 09 febr 2016/css/style.css
@@ -2,9 +2,17 @@ body {
   background-color: #363C5E;
 }
 
-.container-margins {
-  margin-top: 50px;
-  margin-bottom: 50px;
+.outer {
+  position: relative;
+  height: 100vh;
+  /*left: 25%;*/
+}
+
+.inner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .wrapper {
@@ -45,7 +53,7 @@ body {
 /* Chrome, Safari, Opera */
 @-webkit-keyframes mywheel {
   from {left: 187px;}
-  to {left: 510px;}
+  to {left: 518px;}
 }
 
 .js-rotate {
@@ -62,7 +70,7 @@ body {
 
 .js-go {
   background: url(../img/car.png) no-repeat center;
-  background-position-x: 1123%;
+  background-position-x: 1148%;
   background-size: contain;
   height: 550px;
 }
